# VehicularBlast

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  map_pbf.proto
assets/maps/: 1.pbf  10.pbf  11.pbf  12.pbf  13.pbf  14.pbf  15.pbf  16.pbf  17.pbf  18.pbf  19.pbf  2.pbf  20.pbf  21.pbf  22.pbf  23.pbf  24.pbf  25.pbf  26.pbf  27.pbf  28.pbf  29.pbf  3.pbf  30.pbf  31.pbf  32.pbf  33.pbf  34.pbf  35.pbf  36.pbf  37.pbf  38.pbf  39.pbf  4.pbf  40.pbf  41.pbf  42.pbf  43.pbf  44.pbf  45.pbf  (+30 more)
assets/models/: blok.glb  bprmpup.glb  brdr.glb  brdr2.glb  cac1.glb  cac2.glb  cac3.glb  chk.glb  dbmp.glb  dchk.glb  destroy.glb  dhil.glb  drags.glb  drmpb.glb  drmpg.glb  drmps.glb  drod.glb  drodb.glb  drodbb.glb  drode.glb  drodt.glb  fenc.glb  fix.glb  grod.glb  lift.glb  mass.glb  mixnd.glb  mixpd.glb  mixpn.glb  mountn.glb  net.glb  nrod.glb  nrodt.glb  pile1.glb  pile2.glb  pipe.glb  pipg.glb  prmp.glb  prmpb.glb  prmpc.glb  (+29 more)
assets/shaders/: main.fs  main.vs
cgltf/: CMakeLists.txt
include/veb/component/: ComponentMesh.hpp  ComponentPosition.hpp  ComponentRotation.hpp  Components.hpp
include/veb/engine/: Camera.hpp  Entity.hpp  EntityRenderer.hpp  Game.hpp  MainMenu.hpp  Map.hpp  MapSelection.hpp  SkyboxRenderer.hpp  State.hpp  StateManager.hpp  VehicleSelection.hpp  World.hpp
include/veb/gfx/: FragmentShader.hpp  Mesh.hpp  Rect.hpp  Shader.hpp  ShaderProgram.hpp  VertexShader.hpp
include/veb/io/: Keyboard.hpp  MeshBank.hpp
include/veb/pbf/: map_pbf.h
include/veb/registry/: Registry.hpp
include/veb/render/: RenderSystem.hpp  WorldRenderer.hpp
include/veb/shaders/: EntityShader.hpp  SkyShader.hpp
src/: main.cpp
src/engine/: Camera.cpp  Entity.cpp  Entity.hpp  EntityRenderer.cpp  Game.cpp  MainMenu.cpp  Map.cpp  Map.hpp  MapSelection.cpp  SkyboxRenderer.cpp  StateManager.cpp  VehicleSelection.cpp  World.cpp
src/gfx/: Mesh.cpp  Mesh.hpp  Rect.cpp  Shader.cpp  ShaderProgram.cpp
src/gfx/shader/: FragmentShader.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  VertexShader.hpp
src/gui/: Window.cpp  Window.hpp
src/io/: Keyboard.cpp  Keyboard.hpp  MeshBank.cpp  MeshBank.hpp  MeshFile.cpp  MeshFile.hpp
src/pbf/: map_pbf.c  map_pbf.h
src/render/: RenderSystem.cpp  WorldRenderer.cpp
src/shaders/: EntityShader.cpp  SkyShader.cpp
